--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -34,9 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.1
+  provider: ^6.1.5+1
   flutter_secure_storage: ^9.0.0
-  equatable: ^2.0.7
   flutter_svg: ^2.2.0
   http: 1.5.0
   flutter_dotenv: ^6.0.0
